--- a/codepix/.env
+++ b/codepix/.env
@@ -7,3 +7,8 @@ dsnTest=":memory:"
 end="dev"
 debug=true
 AutoMigrateDb=true
+
+kafkaBootstrapServers="kafka:9094"
+kafkaConsumerGroupId=codepix
+kafkaTransactionTopic="transactions"
+kafkaTransactionConfirmationTopic="transaction_confirmation"
