--- a/back-api/docker-compose.yaml
+++ b/back-api/docker-compose.yaml
@@ -14,6 +14,8 @@ services:
       - db
     env_file:
       - ./.env
+    extra_hosts:
+      - "host.docker.internal:172.17.0.1"
 
   db:
     build: .docker/postgres
