--- a/codepix/docker-compose.yaml
+++ b/codepix/docker-compose.yaml
@@ -1,14 +1,14 @@
-version: "3"
+version: '3'
 
 services:
   app:
     build: .
     ports:
-      - "50051:50051"
+      - '50051:50051'
     volumes:
       - .:/go/src/
     extra_hosts:
-      - "host.docker.internal:172.17.0.1"
+      - 'host.docker.internal:172.17.0.1'
 
   db:
     image: postgres:9.4
@@ -20,7 +20,7 @@ services:
       - POSTGRES_PASSWORD=root
       - POSTGRES_DB=codepix
     ports:
-      - "5434:5432"
+      - '5434:5432'
 
   pgadmin:
     image: dpage/pgadmin4
@@ -29,11 +29,11 @@ services:
       - PGADMIN_DEFAULT_EMAIL=admin@user.com
       - PGADMIN_DEFAULT_PASSWORD=123456
     ports:
-      - "9000:80"
+      - '9000:80'
     depends_on:
       - db
 
 networks:
   default:
     external:
-      name: kafka_default
+      name: codepix
