--- a/bank-api/.env
+++ b/bank-api/.env
@@ -1,5 +1,5 @@
 TYPEORM_CONNECTION=postgres
-TYPEORM_HOST=db
+TYPEORM_HOST=bank-db
 TYPEORM_USERNAME=postgres
 TYPEORM_PASSWORD=root
 TYPEORM_DATABASE=nest
@@ -9,4 +9,4 @@ TYPEORM_ENTITIES_DIR=src/models
 TYPEORM_MIGRATIONS=src/migrations/**/*.ts
 TYPEORM_MIGRATIONS_DIR=src/migrations
 
-GRPC_URL=host.docker.internal:50051
+GRPC_URL=codepix_app_1:50051
