--- a/bank-api/.env
+++ b/bank-api/.env
@@ -10,3 +10,7 @@ TYPEORM_MIGRATIONS=src/migrations/**/*.ts
 TYPEORM_MIGRATIONS_DIR=src/migrations
 
 GRPC_URL=codepix_app_1:50051
+
+KAFKA_CLIENT_ID=codepix
+KAFKA_BROKER=kafka_kafka_1:9092
+KAFKA_CONSUMER_GROUP_ID=
