feat(bank-api): class 4 (part 4) - final implementation  of multiple banks

--- a/bank-api/.env
+++ b/bank-api/.env
@@ -1,8 +1,8 @@
 TYPEORM_CONNECTION=postgres
-TYPEORM_HOST=bank-db
+#TYPEORM_HOST=bank-db
 TYPEORM_USERNAME=postgres
 TYPEORM_PASSWORD=root
-TYPEORM_DATABASE=nest
+#TYPEORM_DATABASE=nest
 TYPEORM_PORT=5432
 TYPEORM_ENTITIES=src/**/*.model.ts
 TYPEORM_ENTITIES_DIR=src/models
