--- a/codepix/.env
+++ b/codepix/.env
@@ -4,11 +4,11 @@ dsn="dbname=codepix sslmode=disable user=postgres password=root host=db"
 dbTypeTest="sqlite3"
 dsnTest=":memory:"
 
-end="dev"
+env="dev"
 debug=true
 AutoMigrateDb=true
 
-kafkaBootstrapServers="kafka:9094"
+kafkaBootstrapServers="kafka_kafka_1:9092"
 kafkaConsumerGroupId=codepix
 kafkaTransactionTopic="transactions"
 kafkaTransactionConfirmationTopic="transaction_confirmation"
